src/assets/styles/sharedStyles.module.css
@import './mediaQueries.css';

.subOne,
.subTwo,
.subThree {
    color: var(--color-levant);
    text-transform: uppercase;
    display: block;
}

.subTwo,
.subThree {
    font-family: 'Barlow Condensed', sans-serif;
}

.subOne {
    font-family: Bellefair, serif;
    font-size: 1.6rem;

    @media (--min-tablet) {
        font-size: 2rem;
    }

    @media (--min-desktop) {
        font-size: 2.8rem;
    }
}

.subTwo {
    font-size: 1.4rem;
    letter-spacing: 2.35;

    @media (--min-tablet) {
        font-size: 1.6rem;
        letter-spacing: 2.7px;
    }
}

.subThree {
    font-size: 1.6rem;
    letter-spacing: 2.7px;

    @media (--min-tablet) {
        font-size: 2rem;
        letter-spacing: 3.375px;
    }
}

.carouselGallery {
    display: flex;
    flex-direction: row;
    margin: 2rem auto 2.6rem;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */

    &::-webkit-scrollbar {
        display: none;
    }

    & img {
        width: inherit;
        scroll-snap-align: center;
    }
}

.footerMobile {
    font-family: 'Barlow Condensed';
    width: 100%;
    height: fit-content;
    color: white;
    text-align: center;
    padding: 2rem 1rem;
    margin-left: 3.2rem;
    display: block;
    font-size: 1.4rem;
    text-align: left;

    & a {
        color: white;
        text-decoration: underline;
        margin-left: 0.3rem;
    }
}

